# ConanProjects

./: .gitignore  Conan_README_Help.txt
BoostExperiments/: CMakeLists.txt  README.txt  conanfile.py
BoostExperiments/src/: main.cpp
JsonCpp/: CMakeLists.txt  conanfile.txt
JsonCpp2/: conanfile.py
JsonCpp2/src/: main.cpp
Layouts/: README.txt  conanfile.py
OpenCV/: CMakeLists.txt  README.txt  conanfile.txt
OpenCV/src/: main.cpp
Protobuf/serialization/: README.txt
PythonConfiguration/: conanfile.py
SQLiteProject/: CMakeLists.txt  CMakePresets.json  README.txt  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
SQLiteProject/src/: main.cpp
SimpleProject/: README.txt
